--- a/popup.css
+++ b/popup.css
@@ -89,7 +89,7 @@ i.fa-plus {
     width: 180px;
     background-color: rgb(48, 47, 47);
     color: rgb(255, 255, 255);
-    text-align: center;
+    text-align: left;
     padding: 5px 5px;
     border-radius: 6px;
     font-family: 'Montserrat', sans-serif;
